welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:2: error: illegal start of simple expression
while (!estSurBlanc)}
                    ^Program:5: error: 'while' expected but '}' found.
	}
        ^